--- a/templates/dtfb/pdf-header.tex
+++ b/templates/dtfb/pdf-header.tex
@@ -7,10 +7,14 @@
 \usepackage{lastpage}
 \usepackage{titling}
 \usepackage{hyperref}
+\usepackage{fontspec}
 
-\definecolor{DTFBRed}{HTML}{7F070D}
-\definecolor{DTFBGold}{HTML}{8A6A11}
-\definecolor{DTFBGray}{HTML}{5A5450}
+\definecolor{DTFBGreen}{HTML}{008F39}
+\definecolor{DTFBDark}{HTML}{011C1D}
+\definecolor{DTFBGray}{HTML}{4A4A49}
+
+\IfFontExistsTF{TeX Gyre Heros}{\setmainfont{TeX Gyre Heros}}{\setmainfont{Latin Modern Sans}}
+\IfFontExistsTF{TeX Gyre Heros Condensed}{\newfontfamily\dtfbtitlefont{TeX Gyre Heros Condensed}[Weight=500]}{\newfontfamily\dtfbtitlefont{TeX Gyre Heros}[Weight=500]}
 
 \geometry{bottom=1.8in}
 
@@ -25,15 +29,48 @@
 \fancyfoot[C]{\raisebox{0pt}{\includegraphics[width=\textwidth]{templates/dtfb/images/DTFB-wave.png}}}
 \fancyfoot[R]{\raisebox{-10pt}{\textcolor{DTFBGray}{\small Seite \thepage\ von \pageref{LastPage}}}}
 
-\titleformat{\section}{\Large\bfseries\color{DTFBRed}}{\thesection}{0.6em}{}
-\titleformat{\subsection}{\large\bfseries\color{DTFBRed}}{\thesubsection}{0.6em}{}
-\titleformat{\subsubsection}{\normalsize\bfseries\color{DTFBRed}}{\thesubsubsection}{0.6em}{}
+\titleformat{\section}{\Large\bfseries\color{DTFBGreen}}{\thesection}{0.6em}{}
+\titleformat{\subsection}{\large\bfseries\color{DTFBGreen}}{\thesubsection}{0.6em}{}
+\titleformat{\subsubsection}{\normalsize\bfseries\color{DTFBGreen}}{\thesubsubsection}{0.6em}{}
 
 \setlength{\parskip}{0.6em}
 \setlength{\parindent}{0pt}
 
 \hypersetup{
   colorlinks=true,
-  linkcolor=DTFBRed,
-  urlcolor=DTFBRed
+  linkcolor=DTFBGreen,
+  urlcolor=DTFBGreen
 }
+
+\makeatletter
+\newcommand{\dtfbsubtitle}{}
+\@ifundefined{subtitle}{
+  \newcommand{\subtitle}[1]{\gdef\dtfbsubtitle{#1}}
+}{
+  \let\dtfborigsubtitle\subtitle
+  \renewcommand{\subtitle}[1]{\gdef\dtfbsubtitle{#1}\dtfborigsubtitle{#1}}
+}
+\makeatother
+
+\makeatletter
+\renewcommand{\maketitle}{
+  \fancyhead[R]{}
+  \begin{titlepage}
+    \thispagestyle{fancy}
+    \vspace*{1.2cm}
+    \begin{center}
+      \includegraphics[height=80pt]{templates/dtfb/images/DTFB-logo.png}\par
+      \vspace{0.9cm}
+      {\Huge\dtfbtitlefont\bfseries\color{DTFBGreen}\thetitle\par}
+      \ifx\dtfbsubtitle\@empty\else
+        \vspace{0.35cm}
+        {\Large\color{DTFBGray}\dtfbsubtitle\par}
+      \fi
+      \vspace{0.8cm}
+      {\large\color{DTFBGray}Stand: \thedate\par}
+    \end{center}
+    \vfill
+  \end{titlepage}
+  \fancyhead[R]{\includegraphics[height=50pt]{templates/dtfb/images/DTFB-logo.png}}
+}
+\makeatother
