Fix PDF page numbering after title

--- a/templates/dtfb/pdf-header.tex
+++ b/templates/dtfb/pdf-header.tex
@@ -71,6 +71,7 @@
     \end{center}
     \vfill
   \end{titlepage}
+  \setcounter{page}{2}
   \fancyhead[R]{\includegraphics[height=50pt]{templates/dtfb/images/DTFB-logo.png}}
 }
 \makeatother
